<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="hiker.arukami.arukamiapp.Controllers.Activities.SubmitHikeActivity"
    tools:showIn="@layout/activity_submit_hike">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/About_Hike_Title"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:paddingTop="16dp"
            android:background="?android:attr/dividerHorizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/hike_name"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/hikeName_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="20dp"
                android:paddingEnd="20dp" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerHorizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/start_date"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/startDate_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="20dp"
                android:paddingEnd="20dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerHorizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/end_date"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/endDate_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="27dp"
                android:paddingEnd="20dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerHorizontal" />



        <TextView
            android:id="@+id/title_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/review_Title"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:paddingTop="16dp"
            android:background="?android:attr/dividerHorizontal" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="70dp"
                android:layout_height="0dp"
                android:layout_weight="0.93"
                android:hint="@string/difficulty" />

            <Spinner
                android:id="@+id/spinner_difficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_weight="0.03" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="70dp"
                android:layout_height="0dp"
                android:layout_weight="0.93"
                android:hint="@string/quality" />

            <Spinner
                android:id="@+id/spinner_quality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_weight="0.03" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="70dp"
                android:layout_height="0dp"
                android:layout_weight="0.93"
                android:hint="@string/type" />

            <Spinner
                android:id="@+id/spinner_hike_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_weight="0.03" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="70dp"
                android:layout_height="0dp"
                android:layout_weight="0.93"
                android:hint="@string/price" />

            <Spinner
                android:id="@+id/spinner_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_weight="0.03" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description" />

            <EditText
                android:id="@+id/description_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.93"
                android:ems="10"
                android:inputType="textMultiLine" />

        </LinearLayout>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
